--- a/omg_sqlite/Cargo.toml
+++ b/omg_sqlite/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "sync_demo"
+name = "omg_sqlite"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-omg_sqlite = { path = "../omg_sqlite" }
+omg_core = { path = "../omg_core" }
