--- a/sync_demo/Cargo.toml
+++ b/sync_demo/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+omg_core = { path = "../omg_core" }
 omg_sqlite = { path = "../omg_sqlite" }
