--- a/omg_core/Cargo.toml
+++ b/omg_core/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-time = { version = "0.3", default-features = false, features = ["alloc"] }
-serde = { version = "1.0", default-features = false, features = ["alloc"] }
-serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+time = "0.3"
+serde = "1.0"
+serde_json = "1.0"
