--- a/sync_demo/Cargo.toml
+++ b/sync_demo/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 omg_core = { path = "../omg_core" }
 omg_sqlite = { path = "../omg_sqlite" }
+serde = "1.0"
+serde_json = "1.0"
