sync demo add using storage api directly.

--- a/sync_demo/Cargo.toml
+++ b/sync_demo/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 omg_core = { path = "../omg_core" }
 omg_sqlite = { path = "../omg_sqlite" }
+time = "0.3"
 serde = "1.0"
 serde_json = "1.0"
