--- a/omg_core/Cargo.toml
+++ b/omg_core/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 time = "0.3"
 serde = "1.0"
 serde_json = "1.0"
+tokio ={ version = "1", default-features = false, features = ["sync"]}
