--- a/omg_core/Cargo.toml
+++ b/omg_core/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 serde = "1.0"
 serde_json = "1.0"
-tokio ={ version = "1", default-features = false, features = ["sync"]}
+tokio = { version = "1", default-features = false, features = ["sync"]}
+thiserror = "1.0"
