--- a/sync_demo/Cargo.toml
+++ b/sync_demo/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 omg_core = { path = "../omg_core" }
 omg_sqlite = { path = "../omg_sqlite" }
+tokio = { version = "1", default-features = false, features = ["sync"]}
