--- a/sync_demo/Cargo.toml
+++ b/sync_demo/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 omg_core = { path = "../omg_core" }
 omg_sqlite = { path = "../omg_sqlite" }
 tokio = { version = "1", default-features = false, features = ["sync"]}
+serde_json = "1.0"
