--- a/omg_sqlite/Cargo.toml
+++ b/omg_sqlite/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 omg_core = { path = "../omg_core" }
 sqlite = "0.32.0"
 async-channel = "2.1.1"
+async-broadcast = "0.6.0"
+futures-lite = "2.2.0"
