--- a/omg_core/Cargo.toml
+++ b/omg_core/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 async-channel = "2.1.1"
 async-broadcast = "0.6.0"
+futures-lite = "2.2.0"
 tokio = { version = "1", default-features = false, features = ["sync"]}
 thiserror = "1.0"
