--- a/sync_demo/Cargo.toml
+++ b/sync_demo/Cargo.toml
@@ -10,3 +10,4 @@ omg_core = { path = "../omg_core" }
 omg_sqlite = { path = "../omg_sqlite" }
 tokio = { version = "1", default-features = false, features = ["sync"]}
 serde_json = "1.0"
+futures-lite = "2.2.0"
