--- a/omg_core/Cargo.toml
+++ b/omg_core/Cargo.toml
@@ -11,3 +11,4 @@ async-broadcast = "0.6.0"
 futures-lite = "2.2.0"
 tokio = { version = "1", default-features = false, features = ["sync"]}
 thiserror = "1.0"
+async-executor = "1.8.0"
